SERVER-76873 Range deletions should never wait on metadata objects that have no usages

(cherry picked from commit 20f0868213dda0091691ae19e19f2f832f6d7e79)